added and updated new unit generated tests